change class custome background

--- a/custom-web-app.html
+++ b/custom-web-app.html
@@ -76,7 +76,7 @@
             </div>
         </nav>
     </header>
-    <section class="section-first custome-background">
+    <section class="section-first custom-background">
         <div class="background-dark-thin">
             <div class="container">
                 <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
