--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
         <div class="col-md-6">
           <form action="" id="form-subscribe" class="input-group mb-1" data-aos="fade-left" data-aos-duration="1500">
-            <input type="email" name="email" class="form-control input-subscribe px-3" required  placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+            <input type="email" name="email" class="form-control input-subscribe px-3" required placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
             <button class="input-group-text button-subscribe" id="basic-addon2" type="submit">Join</button>
           </form>
           <p class="message-subscribe d-none mb-0">Thanks for subscribe!</p>
@@ -506,6 +506,13 @@
             <a href="https://goo.gl/maps/PYH4nFhexuqaSpYR9" target="_blank" class="m-0">Jl. Sentra Raya No. 11</a>
           </div>
         </div>
+
+        <div class="media-social-icon d-flex justify-content-start">
+          <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f me-4 fs-5"></i></a>
+          <a href="https://twitter.com/nine_od" target="_blank" class="text-secondary"><i class="fab fa-twitter me-4 fs-5"></i></a>
+          <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube me-4 fs-5" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/nineodev/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
+        </div>
       </div>
       <div class="contact-title-wrapper w-50">
         <div class="contact-title">
@@ -517,33 +524,29 @@
             We're open for any sugeestion or just to have a chat
           </p>
         </div>
-        <form action="#" class="form row" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
+        <form action="" class="form row" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
           <div class="col-md-12">
             <div class="input-group-contact d-flex justify-content-between">
-              <input type="text" class="input-control-contact txt-primary" placeholder="Name" />
-              <input type="text" class="input-control-contact txt-primary" placeholder="Email" />
+              <input type="text" class="input-control-contact txt-primary" name="name" placeholder="Name" required />
+              <input type="text" class="input-control-contact txt-primary" name="email" placeholder="Email" required />
             </div>
           </div>
           <div class="col-md-12">
-            <input type="text" class="input-control-contact w-100 txt-primary" placeholder="Subject" />
+            <input type="text" class="input-control-contact w-100 txt-primary" name="subject" placeholder="Subject" required />
           </div>
           <div class="col-md-12">
-            <textarea name="" id="" cols="30" rows="7" class="input-control-contact w-100 txt-primary" placeholder="Type your message here..."></textarea>
+            <textarea name="" id="" cols="30" rows="7" class="input-control-contact w-100 txt-primary" name="message" placeholder="Type your message here..." required></textarea>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12 mb-3">
             <button class="w-100 text-uppercase fw-bold border-0 btn-submit-contact">
               submit
             </button>
           </div>
+          <p class="text-center message-contact d-none">Thanks for submitting!</p>
         </form>
       </div>
     </div>
-    <div class="media-social-icon d-flex justify-content-start">
-      <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f me-4 fs-5"></i></a>
-      <a href="https://twitter.com/nine_od" target="_blank" class="text-secondary"><i class="fab fa-twitter me-4 fs-5"></i></a>
-      <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube me-4 fs-5" aria-hidden="true"></i></a>
-      <a href="https://www.instagram.com/nineodev/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
-    </div>
+
   </section>
   <footer>
     <div class="container">
