--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           <div class="col-md-12">
             <div class="input-group-contact d-flex justify-content-between">
               <input type="text" class="input-control-contact txt-primary" name="name" placeholder="Name" required />
-              <input type="text" class="input-control-contact txt-primary" name="email" placeholder="Email" required />
+              <input type="email" class="input-control-contact txt-primary" name="email" placeholder="Email" required />
             </div>
           </div>
           <div class="col-md-12">
