--- a/index.html
+++ b/index.html
@@ -579,14 +579,10 @@
     </div>
   </footer>
   <script src="./assets/js/jquery/jquery.js"></script>
-  <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
-  <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
-  <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
-  <script src="./assets/js/jquery/jquery.validate.min.js"></script>
-  <script src="./assets/js/custom.js"></script>
+  <script src="./assets/js/navToggle.js"></script>
 </body>
 
 </html>
