--- a/platform-builder.html
+++ b/platform-builder.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/aos/aos.css">
+  <link rel="shortcut icon" href="#">
   <title>Platform Builder | Nineod</title>
 </head>
 
@@ -80,10 +81,10 @@
     <div class="background-dark-thin">
       <div class="container">
         <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
-          <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+          <h1 class="text-capitalize mb-3 fw-light w-55" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             kembangkan bisnis anda secara online
           </h1>
-          <p class="mb-4 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
+          <p class="mb-4 fs-5 fw-light w-55" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
             Kembangkan Bisnis Online Anda dengan menggunakan layanan Platform
             Builder kami
           </p>
@@ -520,13 +521,10 @@
     </div>
   </footer>
   <script src="./assets/js/jquery/jquery.js"></script>
-  <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
-  <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
-  <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
-  <script src="./assets/js/custom.js"></script>
+  <script src="./assets/js/navToggle.js"></script>
 </body>
 
 </html>
