--- a/website-builder.html
+++ b/website-builder.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/aos/aos.css">
+  <link rel="shortcut icon" href="#">
   <title>Website Builder | Nineod</title>
 </head>
 
@@ -437,13 +438,10 @@
     </div>
   </footer>
   <script src="./assets/js/jquery/jquery.js"></script>
-  <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
-  <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
-  <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
-  <script src="./assets/js/custom.js"></script>
+  <script src="./assets/js/navToggle.js"></script>
 </body>
 
 </html>
