add validate jquery

--- a/index.html
+++ b/index.html
@@ -585,7 +585,9 @@
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
+  <script src="./assets/js/jquery/jquery.validate.min.js"></script>
   <script src="./assets/js/navToggle.js"></script>
+  <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
