fix bug overflow

--- a/index.html
+++ b/index.html
@@ -508,20 +508,18 @@
               <a href="https://goo.gl/maps/PYH4nFhexuqaSpYR9" target="_blank" class="m-0">Jl. Sentra Raya No. 11</a>
             </div>
           </div>
-        </div>
-        <div class="contact-title-wrapper col-md-6">
-          <div class="contact-title">
-            <h1 class="fw-bold text-black mb-0 w-100" data-aos="fade-in" data-aos-duration="3000">
-              <span class="txt-secondary">Interested</span>
-              in discussing?
-            </h1>
-            <p class="txt-primary" data-aos="fade-in" data-aos-duration="3000">
-              We're open for any sugeestion or just to have a chat
-            </p>
-          </div>
-          <form action="" id="form-contact" class="row gy-3" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
+        </div>  
+        <div class="col-md-6 ">
+          <h1 class="fw-bold text-black mb-0 w-100" data-aos="fade-in" data-aos-duration="3000">
+            <span class="txt-secondary">Interested</span>
+            in discussing?
+          </h1>
+          <p class="txt-primary" data-aos="fade-in" data-aos-duration="3000">
+            We're open for any sugeestion or just to have a chat
+          </p>
+          <form action="" id="form-contact" class="row gy-3 gx-0" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
             <div class="col-md-12">
-              <div class="row gy-3">
+              <div class="row gy-3 gx-0">
                 <div class="col-md-6">
                   <p class="mb-0"><input type="text" class="input-control-contact txt-primary w-100" name="name" placeholder="Name" required /></p>
                 </div>
@@ -542,17 +540,6 @@
               </button>
             </div>
           </form>
-        </div>
-        <div class="col-md-6 ">
-          <div class="media-social-icon d-flex justify-content-center">
-            <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f me-4 fs-5"></i></a>
-            <a href="https://twitter.com/nine_od" target="_blank" class="text-secondary"><i class="fab fa-twitter me-4 fs-5"></i></a>
-            <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube me-4 fs-5" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/nineodev/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <p class="text-center message-contact mb-0 d-none">Thanks for submitting!</p>
         </div>
       </div>
     </div>
