implementing filter input in feature service

--- a/website-builder.html
+++ b/website-builder.html
@@ -172,10 +172,9 @@
   </section>
   <section class="ask-questions py-5">
     <div class="container">
-      <div class="ask-questions-title d-flex justify-content-between align-items-center">
-        <div></div>
-        <h3 class="text-uppercase">faq</h3>
-        <i class="fas fa-search"></i>
+      <div class="ask-questions-title m-5">
+        <h3 class="text-uppercase text-center">faq</h3>
+        <i class="fas fa-search search-icon float-end"></i>
       </div>
       <div class="accordion accordion-flush faq-dropdown" id="accordionFlushExample">
         <div class="accordion-item">
@@ -442,6 +441,7 @@
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
   <script src="./assets/js/navToggle.js"></script>
+  <script src="./assets/js/servicePage.js"></script>
 </body>
 
 </html>
